# esperanto

./: .cirrus.yml  CHANGES.md  GNUmakefile  LICENSE.md  README.md  cosmopolitan-pth.opam  cosmopolitan.opam  esperanto.opam  release.sh
.github/workflows/: main.yml
caml/: GNUmakefile  META  Makeconf  arm64.S.patch  clean-path.sh  configure.sh  emit.mlp.aarch64.patch  esperanto.conf.in  esperanto.h  esperanto_gethost.patch  esperanto_open.c  esperanto_permission.c  esperanto_signals.c  esperanto_socket.c  esperanto_socketaddr.4.13.1.patch  esperanto_socketaddr.patch  esperanto_sockopt.c  esperanto_sys.c  esperanto_systhreads_signals.c  esperanto_termios.c  esperanto_termios.patch  esperanto_unix_signals.c  esperanto_unixsupport.c  esperanto_wait.c  install.sh  proc.ml.aarch64.patch
example/: cat.com  cat.ml  dune  dune-workspace  link.sh
extract/: GNUmakefile  README.md  dune  dune-project  dune-workspace  extract-cosmopolitan.opam  extract.ml  zip.ml
opam/: aarch64-esperanto.opam  cosmopolitan.opam  esperanto-cosmopolitan.opam  esperanto.opam  opam-release.sh  x86_64-esperanto.opam
opam/release/tmp/: url
pth/: configure
toolchain/: .depend  GNUmakefile  Makefile.common  build.sh  cc.in  configure.sh  cosmocc.digest  cosmopolitan_syscalls.c  dune  dune-project  extract.com  extract.ml  fake_threads.c  fake_unix.c  install.ml  ld.in  objcopy.in  pth_syscalls.c  startup.c  startup.d  startup_threads.c  startup_unix.c  test.ml  zip.ml
toolchain/cosmo/aarch64-linux-cosmo/lib/: aarch64.lds
toolchain/cosmo/aarch64-linux-cosmo/lib/tiny/: aarch64.lds
toolchain/cosmo/libexec/gcc/aarch64-linux-cosmo/11.2.0/: collect2
toolchain/cosmo/libexec/gcc/aarch64-linux-cosmo/14.1.0/: collect2
toolchain/cosmo/libexec/gcc/x86_64-linux-cosmo/11.2.0/: as  collect2
toolchain/cosmo/libexec/gcc/x86_64-linux-cosmo/14.1.0/: as  collect2
toolchain/cosmo/x86_64-linux-cosmo/lib/: ape.lds
toolchain/cosmo/x86_64-linux-cosmo/lib/dbg/: ape.lds
toolchain/cosmo/x86_64-linux-cosmo/lib/optlinux/: ape.lds
toolchain/include/cosmopolitan/: esperanto.h
toolchain/include/cosmopolitan/sys/: types.h
