opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/gilbraltar"
bug-reports: "https://github.com/dinosaure/gilbraltar/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/gilbraltar.git"
build: [
  ["sh" "-c" "cd pth; CC=x86_64-esperanto-none-static-cc \
                      CFLAGS=-D__STRICT_ANSI__ \
		      ./configure \
		        --disable-shared \
			--enable-pthread \
			--enable-syscall-soft \
			--with-gnu-ld \
			--host=x86_64-esperanto-none \
                        --prefix=%{prefix}% \
			--libdir=%{lib}%/x86_64-esperanto-none-static/ \
			--datadir=%{share}%/x86_64-esperanto-none-static/ \
			--mandir=%{man}%/x86_64-esperanto-none-static/ \
			--includedir=%{prefix}%/include/x86_64-esperanto-none-static/"]
  ["sh" "-c" "cd pth; %{make}%"]
]
install: ["sh" "-c" "cd pth; %{make}% install" ]
depends: [
  "ocaml-src" {build}
  "cosmopolitan" {build}
]
synopsis: "Pth (Portable Threads) for Cosmopolitan"
description:
  "Pth support (pthreads) for Cosmopolitan and Esperanto"
