opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/esperanto"
bug-reports: "https://github.com/dinosaure/esperanto/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/esperanto.git"
build: [
  [ "sh" "-c" "cd toolchain ; ./configure.sh --prefix=%{prefix}%" ]
  [ "sh" "-c" "cd toolchain ; %{make}% all" ]
]
install: [ "sh" "-c" "cd toolchain ; %{make}% install" ]
depends: [
  "ocamlfind" {build}
  "conf-gcc"
  "digestif"
  "camlzip"
  "fmt"
]
synopsis: "Cosmopolitan toolchain for OCaml compiler"
description: "A little toolchain for OCaml with Cosmopolitan"
