opam-version: "2.0"
name:         "extract-cosmopolitan"
maintainer:   [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
authors:      [ "Romain Calascibetta <romain.calascibetta@gmail.com>" ]
homepage:     "https://github.com/dinosaure/esperanto"
bug-reports:  "https://github.com/dinosaure/esperanto/issues"
dev-repo:     "git+https://github.com/dinosaure/esperanto"
doc:          "https://dinosaure.github.io/esperanto/"
license:      "MIT"
synopsis:     "The extract.com tool used by esperanto"
description:  "The extract.com tool used by esperanto compiled by esperanto..."

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
install:  [
  [ "dune" "install" "-p" name ] {with-test}
]

depends: [
  "ocaml"           {>= "4.08.0"}
  "dune"            {>= "2.6.0"}
  "decompress"
  "fmt"
  "digestif"
  "bigstringaf"
]

pin-depends: [
  [ "digestif.dev" "git+https://github.com/mirage/digestif.git#7adc43cc8d1d80c2d9104dabd5730425b1b7ace8" ]
]
