opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/esperanto"
bug-reports: "https://github.com/dinosaure/esperanto/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/esperanto.git"
build: [
  [ "sh" "-c" "cd toolchain && ./configure.sh --prefix=%{prefix}%" ]
  [ make "-C" "toolchain" "all" "V=1" ]
]
# We should depend on conf-binutils but the package does not work on FreeBSD
# even if we can do [pkg install binutils] on FreeBSD 12
# depends: [
#   "conf-binutils"
# ]
install: [ "sh" "-c" "cd toolchain ; %{make}% install" ]
synopsis: "Cosmopolitan toolchain for OCaml compiler"
description: "A little toolchain for OCaml with Cosmopolitan"
available: [ arch = "x86_64" ]
