opam-version: "2.0"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage: "https://github.com/dinosaure/esperanto"
bug-reports: "https://github.com/dinosaure/esperanto/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/dinosaure/esperanto.git"
build: [
  [ make "-C" "toolchain" ]
]
install: [
  [ make "-C" "toolchain" "PREFIX=%{prefix}%" "install" ]
]
depends: [
  "ocaml" {>= "4.13.0"}
  "dune"
  "decompress" {>= "1.5.3"}
  "checkseum"
  "digestif"
# "conf-binutils"
]
synopsis: "Cosmopolitan toolchain for OCaml compiler"
description: "A little toolchain for OCaml with Cosmopolitan"
available: [ arch = "x86_64" & (os = "linux" | os = "freebsd" | os = "openbsd") ]
